# pdf2epub-pro

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/promo/: hn-show.md  reddit-r-programming.md  reddit-r-selfhosted.md  x-thread.md
share/: epub.css
share/pandoc/: dedup-ids.lua
src/pdf2epub_pro/: __init__.py  _tools.py  cli.py  fetch_refs.py  formula_fallback.py  make_cover.py  md2epub.py  md2epub_chunked.py  md2epub_pandoc.py  restore_links.py  split.py  tidy.py  workspace.py
src/pdf2epub_pro/audit/: __init__.py  cli.py  detectors_epub.py  detectors_md.py  framework.py
src/pdf2epub_pro/llmdiff/: __init__.py  __main__.py  chunker.py  cli.py  differ.py  renderer.py
tests/: test_fetch_refs.py  test_formula_fallback.py  test_make_cover.py  test_md2epub_chunked.py  test_md2epub_pandoc.py  test_restore_links.py  test_split.py  test_tidy.py  test_workspace.py
tests/test_audit/: test_cli.py  test_detectors_epub.py  test_detectors_md.py  test_framework.py
tests/test_llmdiff/: conftest.py  test_chunker.py  test_cli.py  test_differ.py  test_renderer.py
